@@ -1290,9 +1290,9 @@ static Msg *handle_dlr(SMPP *smpp, Octstr *destination_addr, Octstr *short_messa
         } else {
             if ((smpp->smpp_msg_id_type & 0x02) || 
                 (!octstr_check_range(msgid, 0, octstr_len(msgid), gw_isdigit))) {
-                tmp = octstr_format("%lu", strtoll(octstr_get_cstr(msgid), NULL, 16));
+                tmp = octstr_format("%llu", strtoll(octstr_get_cstr(msgid), NULL, 16));
             } else {
-                tmp = octstr_format("%lu", strtoll(octstr_get_cstr(msgid), NULL, 10));
+                tmp = octstr_format("%llu", strtoll(octstr_get_cstr(msgid), NULL, 10));
             }
         }
 
@@ -1522,10 +1522,10 @@ static void handle_pdu(SMPP *smpp, Connection *conn, SMPP_PDU *pdu,
                     if ((smpp->smpp_msg_id_type & 0x01) || 
                        (!octstr_check_range(pdu->u.submit_sm_resp.message_id, 0, 
                             octstr_len(pdu->u.submit_sm_resp.message_id), gw_isdigit))) {
-                        tmp = octstr_format("%lu", strtoll(  /* hex */
+                        tmp = octstr_format("%llu", strtoll(  /* hex */
                             octstr_get_cstr(pdu->u.submit_sm_resp.message_id), NULL, 16));
                     } else {
-                        tmp = octstr_format("%lu", strtoll(  /* decimal */
+                        tmp = octstr_format("%llu", strtoll(  /* decimal */
                             octstr_get_cstr(pdu->u.submit_sm_resp.message_id), NULL, 10));
                     }
                 }
